content/en/platform/corda/5.2/developing-applications/notaries/_index.md
---
description: "Learn how to configure a notary for a Corda 5 application network."
date: '2023-02-23'
title: "Notaries"
menu:
  corda52:
    identifier: corda52-develop-notaries
    parent: corda52-develop
    weight: 4600
---
# Notaries

This section outlines how to configure a [notary]({{< relref "../ledger/notaries/_index.md" >}}) for a Corda {{< tooltip >}}application network{{< /tooltip >}}. It contains the following:

* [Network Member Roles](#network-member-roles)
* [Notary Plugin CorDapps](#notary-plugin-cordapps)

{{< note >}}
Notary virtual nodes use an additional `uniqueness` database for capturing state data for double-spend prevention. This is similar to the existing `crypto` and `vault` databases. Currently, when auto-provisioning virtual node databases, a uniqueness database is always provisioned, regardless of whether it is a notary virtual node or not. This will be addressed in a future release.
{{< /note >}}

## Network Member Roles

With the introduction of the {{< tooltip >}}UTXO{{< /tooltip >}} ledger and notaries, Network Operators must be aware of the different roles that exist on a network. Network participants can take one of three roles:

* **Application:** Members which run a {{< tooltip >}}CPI{{< /tooltip >}} containing a {{< tooltip >}}CPB{{< /tooltip >}} which provides a {{< tooltip >}}CorDapp{{< /tooltip >}} to run on the network. Most members fulfil this role, and are our archetypical “Alice” or “Bob” nodes.
* **Notary:** Members which run a CPI containing a CPB which provide a notarization service to the network. These are effectively representatives of a notary service, similar to how notary workers represented a notary service in a Corda 4 high-availability notary setup.
* **MGM:** The Membership Group Manager. In the context of notary functionality, there is nothing special or different about the {{< tooltip >}}MGM{{< /tooltip >}}. The MGM virtual node is deployed as part of your standard network setup.

## Notary Plugin CorDapps

Notary functionality is provided in the form of plugin CorDapps. In theory, anyone can write a new notary protocol by implementing their own CorDapps. However, initially, it is expected to only use protocols provided by R3. For a given notary protocol, two {{< tooltip >}}CPBs{{< /tooltip >}} are expected to be required:

* A **client**, or **application** CPB, which is used to generate a {{< tooltip >}}CPI{{< /tooltip >}} associated with application virtual nodes. At a minimum, this contains a {{< tooltip >}}CPK{{< /tooltip >}} that has an initiating {{< tooltip >}}flow{{< /tooltip >}} that is automatically invoked by the Corda 5 flow framework to initiate a notarization request.
* A **notary server** CPB (Corda Package Bundle), which is used to generate a CPI associated with notary virtual nodes. At a minimum, this contains a CPK that has a responder flow to what is packaged in the client CPB.

For {{< version >}}, the following notary protocols are available:

* Non-validating notary protocol
* Contract-verifying notary protocol

### Plugin Packaging

The following sections describe the details of the architecture shown in the diagram below and the steps you need to take to successfully build your CorDapp. For information on how to deploy a functioning network, see the [Onboarding Notaries]({{< relref "../../application-networks/creating/notaries.md" >}}) section.

{{<
  figure
	 src="featured_non-validating-notary.jpg"
   width=70%
	 figcaption="The CPKs, CPBs, and CPIs involved in getting a functioning network that can run a notary (and by extension, UTXO ledger functionality)"
	 alt="Corda 5 non-validating notary"
>}}

### Notary CPKs

Each protocol is composed of multiple modules/CPKs, which are packaged into two different CPBs. The following module is common to all protocols:

* **`notary-common`** —  contains useful library functionality that is not specific to a particular notary protocol. For example, it defines the structure of an error that may be returned by a notary protocol. This is an example of something that must be standard cross-protocol, because the UTXO ledger depends on this format to perform processing, and the ledger has no visibility of the specific notary protocol that performs notarization.

The following sections describe the modules specific to each protocol:

* [Contract-Verifying Protocol Modules](#contract-verifying-protocol-modules)
* [Non-validating Notary Protocol Modules](#non-validating-notary-protocol-modules)

#### Contract-Verifying Protocol Modules

* **`notary-plugin-contract-verifying-api`** —  
* **`notary-plugin-contract-verifying-client`** —  
* **`notary-plugin-contract-verifying-server`** —  

The source code for these modules can be found in the [notary-plugin-contract-verifying](https://github.com/corda/corda-runtime-os/tree/release/os/5.2/notary-plugins/notary-plugin-contract-verifying) folder in the [notary-plugins area of corda-runtime-os](https://github.com/corda/corda-runtime-os/tree/release/os/5.2/notary-plugins).

#### Non-validating Notary Protocol Modules

There are four modules/CPKs of relevance to the non-validating notary protocol, which are then packaged into two different CPBs. These are:

* **`non-validating-notary-api`** —  contains the payload definition that is used to communicate between the non-validating notary client and server CPKs. Extreme caution must be taken when making changes to this module, as backwards compatibility concerns must be taken into account.
* **`non-validating-notary-client`** —  intended to run on application virtual nodes, and provides a sub-flow that initiates a notarization request to a notary {{< tooltip >}}virtual node{{< /tooltip >}} when requested by the ledger finality flow.
* **`non-validating-notary-server`** —  provides a responder flow to the corresponding initiator flow in the client package, and performs notarization processing.

The source code for these modules can be found in the [notary-plugin-non-validating](https://github.com/corda/corda-runtime-os/tree/release/os/5.2/notary-plugins/notary-plugin-non-validating) folder in the [notary-plugins area of corda-runtime-os](https://github.com/corda/corda-runtime-os/tree/release/os/5.2/notary-plugins).

### Notary Server CPB

***********************

R3 produces a standard non-validating notary server CPB. This only contains CPKs that are produced by R3 and therefore does not require you to build your own CPB using a mixture of R3 and third-party CPKs.

### Application CPB

It is not possible to provide a standard application CPB, because the contents of this depend on the how you write a CorDapp. You must decide which CPKs you will bundle together to provide your application CPB. This is comprised of one or more CPKs which provide the application functionality. However, you must also bundle the appropriate CPKs for the notary protocols your CorDapp will support.

*************** you must bundle the `notary-common`, `<notary-type>-api`, and `<notary-type>-client` CPKs when creating your CPB. For the contract-verifying notary to work, you must package workflows and contracts in separate CPKs.

The easiest way to ensure your CorDapp includes the necessary CPKs is to use the CorDapp dependency functionality of the CPK Gradle plugin. Add one of the following to your Gradle dependency configuration, where `cordaNotaryPluginsVersion` is an appropriate version of `corda-runtime-os`:

* Contract-verifying protocol:

   ```kotlin
   cordapp "com.r3.corda.notary.plugin.nonvalidating:notary-plugin-non-validating-client:$cordaNotaryPluginsVersion"
   ```
* Non-validating notary protocol:

   ```kotlin
   cordapp "com.r3.corda.notary.plugin.contractverifying:notary-plugin-contract-verifying-client:$cordaNotaryPluginsVersion"
   ```

{{< note >}}
It is only necessary to specify a dependency on the client CPK; this itself depends on the API and notary common CPKs, so these transitive dependencies will also be pulled in when constructing your application CPB.
{{< /note >}}

Alternatively, you can form your application CPB using the [Corda CLI]({{< relref "../../reference/corda-cli/package.md" >}}). However, if you choose to use this, you need to explicitly specify all three of the required CPKs.

### CPI Creation

Having two CPBs for the application and notary virtual node roles on the network also extends to needing two different CPIs. This process is unchanged, but ensure the following:

* the notary server CPB signing key is used to create the CPI and then imported to Corda
* the same {{< tooltip >}}group policy{{< /tooltip >}} file is used when creating both the application and notary CPIs, for more information see the [Onboarding Notaries]({{< relref "../../application-networks/creating/notaries.md" >}}) section
